--- a/Project2_ClientUser/src/main/java/View/ChangeInfo.form
+++ b/Project2_ClientUser/src/main/java/View/ChangeInfo.form
@@ -213,6 +213,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Back"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnBackActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
               <GridBagConstraints gridX="8" gridY="9" gridWidth="7" gridHeight="1" fill="0" ipadX="0" ipadY="0" insetsTop="28" insetsLeft="18" insetsBottom="25" insetsRight="0" anchor="18" weightX="0.0" weightY="0.0"/>
