--- a/Project2_ClientUser/src/main/java/View/ChangeInfo.form
+++ b/Project2_ClientUser/src/main/java/View/ChangeInfo.form
@@ -26,8 +26,8 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jPanel3" max="32767" attributes="0"/>
                   <Component id="jPanel1" pref="0" max="32767" attributes="0"/>
+                  <Component id="jPanel3" pref="616" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
